@@ -43,6 +43,7 @@ See http://forrest.apache.org/docs/linking.html for more info
     <index label="Installation" href="install.html" />
     <index label="Load &amp; Store Interfaces" href="loadstore.html" />
     <index label="Input &amp; Output Interfaces " href="inputoutput.html" />
+    <index label="Import &amp; Export Commands " href="importexport.html" />
     <index label="Command Line Interface " href="cli.html" />
     <index label="Storage Formats" href="supportedformats.html" />
     <index label="Dynamic Partitioning" href="dynpartition.html" />
